# peeko

./: Cargo.toml  README.md
example/: Cargo.toml  Makefile  package.json  pyproject.toml
src/: app.rs  lib.rs  main.rs
src/app/: app.rs  mod.rs  state.rs
src/preview/: highlighter.rs  mod.rs  previewer.rs
src/tasks/: detector.rs  mod.rs  parser.rs  task.rs
src/tasks/parsers/: cargo_toml_parser.rs  makefile_parser.rs  mod.rs  package_json_parser.rs  pyproject_toml_parser.rs
src/ui/: events.rs  mod.rs  render.rs
src/utils/: mod.rs
tests/: cli_test.rs  integration_test.rs  tasks_test.rs  test_app.rs  test_preview.rs  test_tasks.rs  test_ui.rs
