[package]
name       = "peeko"
version    = "0.1.0"
edition    = "2021"

[lib]
name       = "peeko"
path       = "src/lib.rs"

[dependencies]
anyhow     = "1.0"
clap       = { version = "4", features = ["derive"] }
crossterm  = "0.26"
ratatui    = "0.20"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
syntect    = "5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile   = "3"
